# ai_research

experiments/ader/: .gitignore  app.py  config.py
experiments/ader/src/: agent.py  db.py  memory.py  prompt_builder.py  test_db.py  test_prompt_builder.py  testing.py
experiments/cli-journal/: .gitignore  README.md  pyproject.toml
experiments/cli-journal/cli_journal/: __init__.py  agent.py  async_utils.py  cli.py  config.py  db.py  llm.py  mem0_store.py  models.py  organizer.py  priming.py  runtime.py  visualize.py
experiments/drug_repurposing_agent/: CHECKLIST.md  __init__.py  config.py  plan.md
experiments/drug_repurposing_agent/config/: experiment.yaml
experiments/drug_repurposing_agent/data/: gold.jsonl  pairs.jsonl  splits.json
experiments/drug_repurposing_agent/docs/: dataset_card.md  labeling_guide.md
experiments/drug_repurposing_agent/pilot/: PILOT_REPORT.md  PILOT_REVIEW.json
experiments/drug_repurposing_agent/prompts/: assessor.md  lesson_generator.md
experiments/drug_repurposing_agent/scripts/: curate_dataset.py  run_pilot.py
experiments/drug_repurposing_agent/src/: __init__.py  agent.py  (+9 more)
experiments/harness/: README.md  agent.py  builtins.py  evaluation.py  hooks.py  increasing_agent_reliability_through_harness_engineering.md  loop_controller.py  prompt.py  retriever.py  session.py  sub_agents.py  tools.py  utils.py
experiments/personal_assistant/: .gitignore  README.md  app.py  config.py
research/: beyond_individual_intelligence.md  code_as_agent_harness.md  ddc.md  harnessing_agentic_evolution.md  metacogagent.md  the_memory_curse.md
(+77 files in other folders)
